Refactor LLM service and exception handling; remove LlmClient, update OAuth2SuccessHandler, and enhance test coverage with new tests for ReminderScheduler and CalendarServiceImpl